<resources>
    <string name="app_name">APLIKASI PRESENSI</string>
    <string name="app_description">Sistem Aplikasi Presensi Selfie dan Lokasi</string>
    <string name="app_moto">Solusi bisnis digital anda</string>

    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="masukkan_username">Masukkan Username</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="masuk">Masuk</string>
    <string name="failed_login">Username dan password tidak cocok</string>

    <string name="keluar">Keluar</string>
    <string name="history">Riwayat Absensi</string>
    <string name="absen_sekarang">Absen Sekarang</string>
    <string name="profil">Profil</string>
    <string name="izin_kerja">Pengajuan Izin Kerja</string>
    <string name="sakit">Pengajuan Sakit</string>
    <string name="dari_tanggal">Dari Tanggal</string>
    <string name="_2022_01_01">2022-01-01</string>
    <string name="sampai_tanggal">Sampai Tanggal</string>
    <string name="filter">Filter</string>
    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="masukkan_nip">Masukkan NIP</string>
    <string name="masukkan_golongan">Masukkan Golongan</string>
    <string name="masukkan_instansi">Masukkan Instansi</string>
    <string name="masukkan_jabatan">Masukkan Jabatan</string>
    <string name="masukkan_atasan">Masukkan Atasan</string>
    <string name="masukkan_nama_atasan">Masukkan Nama Atasan</string>
    <string name="masukkan_tanggal_lahir">Masukkan Tanggal Lahir</string>
    <string name="masukkan_ponsel">Masukkan Ponsel</string>
    <string name="ponsel">Ponsel</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="nama_atasan">Nama Atasan</string>
    <string name="atasan">Atasan</string>
    <string name="jabatan">Jabatan</string>
    <string name="instansi">Instansi</string>
    <string name="golongan">Golongan</string>
    <string name="nip">Kode Pegawai</string>
    <string name="nama">Nama</string>
    <string name="simpan">Simpan</string>
    <string name="absen_luar_lokasi">Absen Luar Lokasi</string>
    <string name="lampiran">Lampiran</string>
    <string name="tipe">Tipe</string>
    <string name="status">Status</string>
    <string name="tanggal_absen">Tanggal Absen</string>
    <string name="absen">Absen</string>
    <string name="di_lokasi">Di lokasi</string>
    <string name="tanggal_selesai">Tanggal Selesai</string>
    <string name="tanggal_mulai">Tanggal Mulai</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="masukkan_password_konfirmasi">Masukkan Password Konfirmasi</string>
    <string name="password_konfirmasi">Password Konfirmasi</string>
    <string name="email_nip">Email / NIP</string>
    <string name="masukkan_email_nip">Masukkan Email / NIP</string>
    <string name="lupa_password">Lupa Password ?</string>
    <string name="login">Login</string>
    <string name="time_left">Keterlambatan</string>
    <string name="persentase">Persentase</string>
    <string name="absen_teman">Absensi Teman</string>
    <string name="tugas_luar">Tugas Luar</string>
    <string name="cuti">Cuti</string>
    <string name="masukkan_waktu_mulai">Masukkan Waktu Mulai</string>
    <string name="masukkan_waktu_selesai">Masukkan Waktu Selesai</string>
    <string name="history_cuti">Cuti</string>
    <string name="history_tugas_luar">Tugas Luar / Dalam</string>
    <string name="ambil_foto">Ambil Foto</string>
    <string name="history_kehadiran"><![CDATA[Riwayat Kehadiran]]></string>
    <string name="masuk_pulang">Masuk / Pulang</string>
    <string name="log">Log Aktivitas</string>
</resources>